# algorithm-utils

./: Cargo.toml
src/: currency.rs  error.rs  lib.rs  order.rs  position.rs  stock_exchange.rs  transaction.rs
src/algorithms/: mod.rs
src/algorithms/export/: algorithm_interface.rs  algorithm_registration.rs  mod.rs
src/algorithms/load/: algorithm.rs  algorithms.rs
src/banks/: account.rs  bank_interface.rs  mod.rs
src/brokers/: broker_capabilities.rs  broker_error.rs  broker_interface.rs  deposit.rs  mod.rs
src/export/: algorithm_interface.rs  algorithm_registration.rs
src/load/: algorithm.rs  algorithms.rs
src/market_values/: mod.rs  percent.rs  points.rs  price.rs
trading-macros/: Cargo.toml
trading-macros/tests/: tests.rs
