[package]
name = "trading-macros"
version = "0.1.0"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = "1.0.28"

[dependencies]
quote = "1.0.6"
syn = {version="1.0.30", features=["full"]}
proc-macro2 = "1.0.18"
